--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,25 @@
   @@include('partials/head.html')
   <body>
     <div class="slider">
-      <div>
+      <div class="slide">
         <img src="images/1.jpg" alt="">
       </div>
-      <div>
+      <div class="slide">
         <img src="images/2.jpg" alt="">
+        <div class="towers-list">
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--1" data-slide="3"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--9" data-slide="4"></div>
+        </div>
+        <div class="towers-pics">
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--1" data-slide="3"></div>
+        </div>
       </div>
-      <div>
+      <div class="slide">
+        <div class="logo" data-slide="2"></div>
         <img src="images/3.jpg" alt="">
       </div>
-      <div>
+      <div class="slide">
+        <div class="logo" data-slide="2"></div>
         <img src="images/4.jpg" alt="">
       </div>
     </div>
