--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,113 @@
   @@include('partials/head.html')
   <body>
     <div class="slider">
+
       <div class="slide">
         <img src="images/1.jpg" alt="">
       </div>
-      <div class="slide">
+
+      <div class="slide slide-map">
         <img src="images/2.jpg" alt="">
         <div class="towers-list">
-          <div class="go-to-slide go-to-slide--list go-to-slide--list--1" data-slide="3"></div>
-          <div class="go-to-slide go-to-slide--list go-to-slide--list--9" data-slide="4"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--1" data-slide="3" data-name="Авраамиевские ворота"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--9" data-slide="4" data-name="Богословская"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--11" data-slide="5" data-name="Веселуха"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--14" data-slide="6" data-name="Городецкая"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--15" data-slide="7" data-name="Громовая"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--25" data-slide="8" data-name="Коломенская"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--32" data-slide="9" data-name="Молоховские ворота"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--33" data-slide="10" data-name="Никольские ворота"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--34" data-slide="11" data-name="Орёл"></div>
+          <div class="go-to-slide go-to-slide--list go-to-slide--list--36" data-slide="14" data-name="Пятницкие ворота"></div>
         </div>
         <div class="towers-pics">
-          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--1" data-slide="3"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--1" data-slide="3" data-name="Авраамиевские ворота"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--9" data-slide="4" data-name="Богословская"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--11" data-slide="5" data-name="Веселуха"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--14" data-slide="6" data-name="Городецкая"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--15" data-slide="7" data-name="Громовая"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--25" data-slide="8" data-name="Коломенская"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--32" data-slide="9" data-name="Молоховские ворота"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--33" data-slide="10" data-name="Никольские ворота"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--34" data-slide="11" data-name="Орёл"></div>
+          <div class="go-to-slide go-to-slide--tower go-to-slide--tower--36" data-slide="14" data-name="Пятницкие ворота"></div>
         </div>
       </div>
+
+
       <div class="slide">
+        <!-- слайд 3-->
         <div class="logo" data-slide="2"></div>
-        <img src="images/3.jpg" alt="">
+        <img src="images/3.jpg" alt="Фроловская">
       </div>
+
       <div class="slide">
+        <!-- слайд 4-->
         <div class="logo" data-slide="2"></div>
-        <img src="images/4.jpg" alt="">
+        <img src="images/4.jpg" alt="Городецкая">
       </div>
+
+
+      <div class="slide">
+        <!-- слайд 5-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/5.jpg" alt="Авраамиевские ворота">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 6-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/6.jpg" alt="Богословская">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 7-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/7.jpg" alt="Веселуха">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 8-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 9-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 10-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 11-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 12-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 13-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <!-- слайд 14-->
+        <div class="logo" data-slide="2"></div>
+        <img src="images/8.jpg" alt="asd">
+      </div>
+
     </div>
     <script src='js/libs.js'></script>
     <script src='js/scripts.js'></script>
